Added enc column

--- a/ranking/notebooks/json.ipynb
+++ b/ranking/notebooks/json.ipynb
@@ -2,66 +2,501 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "with open(\"../data/raw/spaces_dummy_data_v3.json\", mode=\"r\") as f:\n",
+    "# Change some pandas display options\n",
+    "pd.set_option(\"display.max_rows\", 10000)\n",
+    "pd.set_option(\"display.max_columns\", 500)\n",
+    "pd.set_option(\"display.max_colwidth\", 0)\n",
+    "pd.set_option(\"display.width\", 1000)\n",
+    "pd.set_option(\"styler.format.precision\", 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/raw/spaces_dummy_data.json\", mode=\"r\") as f:\n",
     "    file = json.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6 entries, 0 to 5\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column               Non-Null Count  Dtype          \n",
-      "---  ------               --------------  -----          \n",
-      " 0   start                6 non-null      datetime64[ns] \n",
-      " 1   end                  6 non-null      datetime64[ns] \n",
-      " 2   cancellable          6 non-null      int32          \n",
-      " 3   id                   6 non-null      object         \n",
-      " 4   day                  6 non-null      period[D]      \n",
-      " 5   cancellable_percent  6 non-null      timedelta64[ns]\n",
-      "dtypes: datetime64[ns](2), int32(1), object(1), period[D](1), timedelta64[ns](1)\n",
-      "memory usage: 392.0+ bytes\n"
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15568\\1969686817.py:27: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  spaces_details.groupby([\"id\", \"date\"]).sum()\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>cancellable</th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time_span</th>\n",
+       "      <th>cancellable_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.016304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>17:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>23:59:59</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>23:59:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A1</td>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.032609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>23:59:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.027174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>23:59:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.130435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>17:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>23:59:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A2</td>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>16:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>23:59:59</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.032609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.016304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>16:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.010870</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       start       end  cancellable  id        date  time_span  cancellable_percent\n",
+       "0   08:00:00  11:00:00  1            A1  2022-01-01  3.0        0.016304           \n",
+       "1   15:00:00  17:00:00  0            A1  2022-01-01  2.0        0.000000           \n",
+       "2   00:00:00  23:59:59  0            A1  2022-01-02  24.0       0.000000           \n",
+       "3   10:00:00  15:00:00  0            A1  2022-01-03  5.0        0.000000           \n",
+       "4   00:00:00  23:59:00  0            A1  2022-01-04  24.0       0.000000           \n",
+       "5   08:00:00  14:00:00  1            A1  2022-01-05  6.0        0.032609           \n",
+       "6   00:00:00  23:59:00  0            A2  2022-01-01  24.0       0.000000           \n",
+       "7   09:00:00  14:00:00  1            A2  2022-01-02  5.0        0.027174           \n",
+       "8   00:00:00  23:59:00  1            A2  2022-01-03  24.0       0.130435           \n",
+       "9   11:00:00  17:00:00  0            A2  2022-01-04  6.0        0.000000           \n",
+       "10  00:00:00  23:59:00  0            A2  2022-01-05  24.0       0.000000           \n",
+       "11  14:00:00  16:00:00  0            A3  2022-01-01  2.0        0.000000           \n",
+       "12  00:00:00  23:59:59  0            A3  2022-01-02  24.0       0.000000           \n",
+       "13  09:00:00  15:00:00  1            A3  2022-01-03  6.0        0.032609           \n",
+       "14  12:00:00  15:00:00  1            A3  2022-01-04  3.0        0.016304           \n",
+       "15  14:00:00  16:00:00  1            A3  2022-01-05  2.0        0.010870           "
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dd = pd.json_normalize(file, record_path=[\"available_dates\"], meta=[\"id\"])\n",
+    "spaces_details = pd.json_normalize(file, record_path=[\"available_dates\"], meta=[\"id\"], errors=\"ignore\")\n",
+    "\n",
+    "# Change columns type\n",
+    "spaces_details[\"start\"] = spaces_details[\"start\"].astype(\"datetime64[ns]\")\n",
+    "spaces_details[\"end\"] = spaces_details[\"end\"].astype(\"datetime64[ns]\")\n",
+    "spaces_details[\"cancellable\"] = spaces_details[\"cancellable\"].astype(int)\n",
     "\n",
     "\n",
-    "dd['start'] = pd.to_datetime(dd['start'])\n",
-    "dd['end'] = pd.to_datetime(dd['end'])\n",
+    "# Split date from time\n",
+    "spaces_details[\"date\"] = spaces_details[\"start\"].dt.to_period(\"d\")\n",
     "\n",
-    "dd['day'] = dd['start'].dt.to_period('d')\n",
     "\n",
-    "dd\n",
-    "dd.set_index([\"id\",\"day\"])\n",
-    "dd['cancellable'] = dd['cancellable'].astype(int)\n",
-    "dd['cancellable_percent'] = dd['end'] - dd['start']\n",
-    "dd['cancellable_percent'] = dd['cancellable_percent']\n",
-    "dd.info()"
+    "# Get available time span for each date\n",
+    "spaces_details[\"time_span\"] = (spaces_details[\"end\"] - spaces_details[\"start\"]).astype(\"timedelta64[h]\")\n",
+    "\n",
+    "# Correct time span to be 24 for whole day\n",
+    "spaces_details[\"time_span\"] = spaces_details[\"time_span\"].apply(lambda x: x + 1 if x == 23 else x)\n",
+    "\n",
+    "\n",
+    "spaces_details[\"cancellable_percent\"] = spaces_details[\"cancellable\"] * spaces_details[\"time_span\"]\n",
+    "spaces_details[\"cancellable_percent\"] /= spaces_details[\"time_span\"].sum()\n",
+    "\n",
+    "# Extract time from datetime columns\n",
+    "spaces_details[\"start\"] = spaces_details[\"start\"].dt.time\n",
+    "spaces_details[\"end\"] = spaces_details[\"end\"].dt.time\n",
+    "\n",
+    "spaces_details.groupby([\"id\", \"date\"]).sum()\n",
+    "spaces_details"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15568\\1834691651.py:14: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  spaces_details.groupby([\"id\"]).sum()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cancellable</th>\n",
+       "      <th>time_span</th>\n",
+       "      <th>cancellable_percent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.048913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>0.157609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.059783</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    cancellable  time_span  cancellable_percent\n",
+       "id                                             \n",
+       "A1  2            64.0       0.048913           \n",
+       "A2  2            83.0       0.157609           \n",
+       "A3  3            37.0       0.059783           "
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add encoded column\n",
+    "spaces_details['enc'] = [[0] * 24 for i in spaces_details.index]\n",
+    "\n",
+    "    \n",
+    "\n",
+    "for ind, row in spaces_details.iterrows():\n",
+    "    if row[\"end\"].hour ==23:\n",
+    "        end = 24\n",
+    "    else:\n",
+    "        end = row[\"end\"].hour\n",
+    "    for i in range(row[\"start\"].hour, end):\n",
+    "        row['enc'][i] = 1\n",
+    "\n",
+    "spaces_details.groupby([\"id\"]).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15568\\2346798712.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  spaces_details_group = spaces_details.groupby([\"id\"]).sum()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cancellable</th>\n",
+       "      <th>time_span</th>\n",
+       "      <th>cancellable_percent</th>\n",
+       "      <th>enc</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.048913</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>0.157609</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.059783</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    cancellable  time_span  cancellable_percent                                                                       enc\n",
+       "id                                                                                                                       \n",
+       "A1  2            64.0       0.048913             [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+       "A2  2            83.0       0.157609             [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+       "A3  3            37.0       0.059783             [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spaces_details_group = spaces_details.groupby([\"id\"]).sum()\n",
+    "\n",
+    "spaces_details_group[\"enc\"] = [[0] * 24 for i in spaces_details_group.index]\n",
+    "\n",
+    "\n",
+    "spaces_details_group\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
